# PlotNeuralNet

./: .editorconfig  Makefile  README.md  mise.toml  pyproject.toml  tikzmake.sh
examples/: advanced_example.py  basic_cnn.py  example.py  test_simple.py  unet.py
models-examples/AlexNet/: alexnet.py
models-examples/LeNet/: lenet.py
models-examples/VGG16/: vgg16.py
src/: example.py
src/core/: blocks.py  tikzeng.py
src/latex/layers/: Ball.sty  RightBandedBox.sty
src/plotnn/: __init__.py  blocks.py  compiler.py  layers.py  renderer.py  templates.py
src/plotnn/layers/: Box.sty  init.tex
