[project]
name = "plotnn"
version = "0.2.0"                                                         # Added extended layer set
description = "Gerador de diagramas de redes neurais em LaTeX/TikZ"
authors = [{ name = "Emanuel Avila", email = "avilaemanueel@gmail.com" }]

readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.poetry]
packages = [{ include = "plotnn", from = "src" }]

include = ["src/plotnn/layers/*.sty", "src/plotnn/layers/init.tex"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
black = "^25.9.0"

[tool.ruff]
line-length = 100
target-version = "py39"
respect-gitignore = true
extend-exclude = ["models-examples", "examples/*.pdf", "**/*.pyc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402", "E501", "F403", "F405"]

[tool.black]
line-length = 100
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
